# smart-lora-sensor-network

./: .gitignore
esp32-co2-sensor/: Cargo.toml
esp32-lora-co2-sensor/: Cargo.toml
esp32-lora-co2-sensor/fritzing/: wire.fzz
esp32-st7735-display/: Cargo.toml
esp32-st7735-display/.cargo/: config.toml
esp32-st7735-display/fritzing/: wire.fzz
rp2040-moisture-sensor/: Cargo.toml
rp2040-moisture-sensor/.cargo/: config.toml
